--- a/mc_web_console_new_front/index.html
+++ b/mc_web_console_new_front/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" type="text/css" href="/src/app/style/reset.css"> -->
     <title>Vite + Vue + TS</title>
   </head>
   <body>
