--- a/mc_web_console_new_front/index.html
+++ b/mc_web_console_new_front/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" type="text/css" href="/src/app/style/reset.css"> -->
-    <title>Vite + Vue + TS</title>
+    <link rel="stylesheet" type="text/css" href="/src/app/style/reset.css">
+    <!-- <link rel="preload" href="/src/app/fonts/roboto/roboto-v27-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"> -->
+    <title>M-CMP</title>
   </head>
   <body>
     <div id="app"></div>
